test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elog-plus-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elog-plus-backend
  template:
    metadata:
      labels:
        app: elog-plus-backend
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io.scheme: 'http'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
    spec:
      containers:
      - name: elog-plus-backend
        imagePullPolicy: Always
        image: ghcr.io/eed-web-application/elog-plus:sha-cd8239a
        env:
        - name: ELOG_PLUS_MINIO_URL
          valueFrom:
            secretKeyRef:
              name: s3-secret
              key: url
        - name: ELOG_PLUS_MINIO_BUCKET_NAME
          valueFrom:
            secretKeyRef:
              name: s3-secret
              key: bucket
        - name: ELOG_PLUS_MINIO_KEY
          valueFrom:
            secretKeyRef:
              name: s3-secret
              key: access-key
        - name: ELOG_PLUS_MINIO_SECRET
          valueFrom:
            secretKeyRef:
              name: s3-secret
              key: secret-key
        envFrom:
        - configMapRef:
            name: env-config-map
        - secretRef:
            name: mongodb-secret
        - secretRef:
            name: application-secrets
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: 2Gi
            cpu: 1000m
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
      imagePullSecrets:
      - name: gh-secret
