test/ingress-app-token.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elog-plus-backend-ingress-app-token
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: elog-plus-backend-ingress-app-token
spec:
  rules:
  - host: "accel-webapp-dev.slac.stanford.edu"
    http:
      paths:
      - pathType: Prefix
        path: /api/elog-apptoken(/|$)(.*)
        backend:
          service:
            name: elog-plus-backend-service
            port: 
              number: 80
