test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elog-plus-backend-service
spec:
  selector:
    app: elog-plus-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
